--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "generate":"SKIP_PRISMA_VERSION_CHECK=true npx prisma generate",
+    "userdata":"ts-node script/create_user.ts",
     "start": "ts-node main.ts"
   },
   "keywords": [],
@@ -12,15 +13,17 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.7.8",
-    "ts-node": "^10.9.2",
-    "typegraphql-prisma": "^0.24.7",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@prisma/client": "4.13.0",
+    "typegraphql-prisma": "^0.24.7",
+    "@prisma/client": "^4.13.0",
+    "prisma": "^4.13.0",
     "apollo-server": "^3.13.0",
     "graphql": "^15.8.0",
     "type-graphql": "^1.1.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "ts-node": "^10.9.2",
+    "graphql-fields": "^2.0.3"
   }
 }
